poppr 2.1.1.99
===========

NEW FEATURES
-----------

* Threshold argument added to `filter_stats()` 
  (see https://github.com/grunwaldlab/poppr/issues/94)
  
BUG FIX
-----------

* An issue that caused errors in the `imsn()` code output was fixed
  (see https://github.com/grunwaldlab/poppr/issues/93)

poppr 2.1.1
===========

NEW FEATURES
-----------

* `imsn()` now has collapsible side panels
* `nmll()` and `mll()` will now handle genind and genlight objects
* `rraf()` now gives options for minor allele correction encompassed in the 
  internal function `rare_allele_correction()`. This extends also to `pgen()` 
  and `psex()`, which must correct minor allele frequencies by default. See 
    https://github.com/grunwaldlab/poppr/issues/81 for details.

MISC
-----------

* `mlg.filter()` now defaults to using `diss.dist()`
* default threshold for `filter_stats()` is now 1e+6
* `mlg.filter()` now returns a list instead of a pairlist
* the "hist" argument for `poppr()` is now deprecated in favor of "plot"
* documentation improvements
* the show method for snpclone objects now looks distinct from genlight
* genlight objects no longer get passed to `missingno()` in `filter_stats()`
* `filter_stats()` now returns invisibly when plot = TRUE; see 
  https://github.com/grunwaldlab/poppr/issues/87 for details.

BUG FIX
------------

* When supplied an object with no strata, `clonecorrect()` will default to
  `strata = NA`.
* `read.genalex()` will no longer fail if missing data is not coded as zero;
  see https://github.com/grunwaldlab/poppr/issues/84 for details
* `missingno()` no longer removes genotypes AT specified threshold;
  see https://github.com/grunwaldlab/poppr/issues/90 for details

poppr 2.1.0
===========

IMPROVEMENTS
-----------

* `win.ia` and `samp.ia` gain a significant speedup thanks to Jonah Brooks
  implementing the code in C.
* The internal code for the `genotype_curve` has been implemented in C for a 10x
  increase in speed.

NEW FEATURES
-----------
